@@ -921,6 +921,7 @@ t/data/repos1/population_snv/Homo_sapiens/default/Human_all_exon_50MB/1000Genome
 t/data/repos1/population_snv/Homo_sapiens/default/Standard/1000Genomes_hs37d5/Human_all_exon_50MB-1000Genomes_hs37d5.vcf.gz
 t/data/repos1/primer_panel/nCoV-2019/default/SARS-CoV-2/MN908947.3/nCoV-2019.bed
 t/data/repos1/primer_panel/nCoV-2019/V2/SARS-CoV-2/MN908947.3/nCoV-2019.bed
+t/data/repos1/primer_panel/nCoV-2019/V3/B/SARS-CoV-2/MN908947.3/nCoV-2019.bed
 t/data/repos1/references/Bordetella_pertussis/ST24/all/fasta/bpst24_May2010-1.fa
 t/data/repos1/references/Haemonchus_contortus/V1_21June13/all/fasta/haemonchus_V1.fa
 t/data/repos1/references/Homo_sapiens/1000Genomes/all/fasta/human_g1k_v37.fasta
