@@ -1,6 +1,6 @@
 use strict;
 use warnings;
-use Test::More tests => 12;
+use Test::More tests => 14;
 use Test::Exception;
 use Moose::Meta::Class;
 use File::Spec::Functions qw(catdir);
@@ -71,9 +71,20 @@ $pp_repos = catdir($repos, q[primer_panel]);
                                                    tag_index => 2);
   
   is($fc->primer_panel_path, qq{$pp_repos/nCoV-2019/V2/SARS-CoV-2/MN908947.3},
-     q{primer_path correct via lims -version specified});
+     q{primer_path correct via lims - version specified});
 
   is($fc->primer_panel_bed_file, qq{$pp_repos/nCoV-2019/V2/SARS-CoV-2/MN908947.3/nCoV-2019.bed}, 
+     q{primer_panel_bed_file correct via lims});
+
+  my $fd = npg_tracking::data::primer_panel->new ( repository => $repos, 
+                                                   id_run => 33990,
+                                                   position => 1,
+                                                   tag_index => 3);
+  
+  is($fd->primer_panel_path, qq{$pp_repos/nCoV-2019/V3/B/SARS-CoV-2/MN908947.3},
+     q{primer_path correct via lims - version and revision specified});
+
+  is($fd->primer_panel_bed_file, qq{$pp_repos/nCoV-2019/V3/B/SARS-CoV-2/MN908947.3/nCoV-2019.bed}, 
      q{primer_panel_bed_file correct via lims});
 
 }
