@@ -1,5 +1,7 @@
 LIST OF CHANGES
 
+ - Optional revision filed added to primer panel name in LIMs.
+
 release 91.4.0
  - disable downloading *.fa (consensus) files from tracking server
    views of staging folders
